2017-05-30 majiasheng <jiasheng.ma@yahoo.com>
	* Added: Load user profile picture if it exists, use default otherwise

2017-05-28 majiasheng <jiasheng.ma@yahoo.com>
	* Change main.php to load user info from db when logged in
	* Added post class

2017-05-27 majiasheng <jiasheng.ma@yahoo.com>
	* Added session for application, user info now persists across multiple pages
	  when logged in 

2017-05-24 majiasheng <jiasheng.ma@yahoo.com>
	* Refactored directory structure (v1)
