@@ -1,16 +1,15 @@
 <!-- author: Jia Sheng Ma -->
 <?php
 session_start();
+
 require 'constants.php';
 
-$connection = mysqli_connect(DB_SERVER, DB_USER, DB_PASSWORD, DB_NAME);
-$_SESSION['connection'] = $connection;
-if(mysqli_connect_errno()) {
-	die("Database connection failed. <br />" .
-		mysqli_connect_error($connection) . " (" . 
-		mysqli_connect_errno() . ") <br />");
-}
+$dsn = "mysql:host=".DB_SERVER.";dbname=".DB_NAME."charset=".CHARSET;
+$opt = [
+    PDO::ATTR_ERRMODE            => PDO::ERRMODE_EXCEPTION,
+    PDO::ATTR_DEFAULT_FETCH_MODE => PDO::FETCH_ASSOC,
+    PDO::ATTR_EMULATE_PREPARES   => false,
+];
+$pdo = new PDO($dsn, DB_USER, DB_PASSWORD, $opt);
 
-// debug
-echo "[DEBUG] Connection: " . mysqli_get_host_info($connection) . "<br/>";
 ?>
